Changed the weather icon to reflect live data

--- a/src/style.css
+++ b/src/style.css
@@ -84,8 +84,9 @@ main {
 }
 
 .weather-app-icon {
-  font-size: 44px;
-  margin-top: 22px;
+  width: 88px;
+  line-height: 88px;
+  font-weight: bold;
 }
 
 .weather-app-unit {
